[gd_scene load_steps=2 format=3 uid="uid://jxh63py4cs87"]

[ext_resource type="Script" path="res://scripts/file_open.gd" id="1_3gupn"]

[node name="file_open" type="ColorRect"]
offset_right = 764.0
offset_bottom = 110.0
color = Color(0.133333, 0.352941, 0.470588, 1)
script = ExtResource("1_3gupn")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Title"

[node name="name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 45.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "path"

[node name="path" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 67.0
offset_top = -15.0
offset_right = -76.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
grow_horizontal = 0
grow_vertical = 2

[node name="browse" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "browse"

[node name="open" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "open"

[node name="cancel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "cancel"

[connection signal="pressed" from="VBoxContainer/browse" to="." method="_on_browse_pressed"]
[connection signal="pressed" from="VBoxContainer/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="VBoxContainer/cancel" to="." method="_on_cancel_pressed"]
